<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".Screens.SigninActivity"
    android:paddingHorizontal="40dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nimble_logo_description"
        app:srcCompat="@drawable/final_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#666666"
        android:elevation="4dp"
        android:paddingBottom="20dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/SignInEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:paddingVertical="5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:elevation="4dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/SignInPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:paddingVertical="5dp"
        app:endIconMode="password_toggle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:elevation="4dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgotten_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotten_password"
        android:onClick="onClickForgottenPassword"
        android:clickable="true"
        android:focusable="true"/>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:elevation="4dp"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/new_member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_member"
        android:onClick="onClickGoToSignUp"
        android:clickable="true"
        android:focusable="true"
        />
</LinearLayout>
