<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screens.MainActivity">

    <FrameLayout
        android:id="@+id/profile_frame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_tabs"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.tabs.TabLayout
        app:tabTextAppearance="@style/TabText"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/profile_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:tabIndicatorColor="@color/colorOnPrimary"
        app:tabIndicatorGravity="top"
        app:tabTextColor="@color/grey"
        app:tabSelectedTextColor="@color/white"
        app:tabIconTint="@color/tab_colour_selector"
        app:tabMode="auto">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/calendar_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar_tab_txt"
            android:icon="@drawable/ic_baseline_calendar_today_24"
            />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/faves_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favourites_tab_txt"
            android:icon="@drawable/ic_baseline_favorite_24"
            />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/goals_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goals_tab_txt"
            android:icon="@drawable/ic_baseline_flag_24"
            />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/leaderboard_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="LeaderBoard"
            android:icon="@drawable/ic_baseline_leaderboard_24"
            />
    </com.google.android.material.tabs.TabLayout>
</androidx.constraintlayout.widget.ConstraintLayout>